update: config files

--- a/configuration/actor_specifications/actor_specification_df.toml
+++ b/configuration/actor_specifications/actor_specification_df.toml
@@ -1,7 +1,23 @@
+[strategic]
+id = "strategic"
+asset = "Df"
+strategic_options.number_of_removed_work_orders = 25
+strategic_options.urgency_weight = 1
+strategic_options.resource_penalty_weight = 1000000
+strategic_options.clustering_weight = 1000
+
+[tactical]
+id = "tactical"
+asset = "Df"
+tactical_options.number_of_removed_work_orders = 25
+tactical_options.urgency = 1
+tactical_options.resource_penalty = 10000000
+
 [[supervisors]]
 id = "main"
 number_of_supervisor_periods = 3
 assets = [ "Df" ]
+supervisor_options.number_of_removed_work_orders = 15
 
 # [[supervisors]]
 # id = "supervisor-second"
@@ -12,6 +28,7 @@ assets = [ "Df" ]
 id = "OP-01-001"
 resources = ["MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00",  end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -23,6 +40,7 @@ assets = [ "Df" ]
 id = "OP-01-002"
 resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -34,6 +52,7 @@ assets = [ "Df" ]
 id = "OP-01-003"
 resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -45,6 +64,7 @@ assets = [ "Df" ]
 id = "OP-01-004"
 resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -59,6 +79,7 @@ assets = [ "Df" ]
 id = "OP-02-001"
 resources = [ "MTN-INST" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -70,6 +91,7 @@ assets = [ "Df" ]
 id = "OP-02-002"
 resources = [ "MTN-INST" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -84,6 +106,7 @@ assets = [ "Df" ]
 id = "OP-02-001"
 resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -95,6 +118,7 @@ assets = [ "Df" ]
 id = "OP-02-002"
 resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -106,6 +130,7 @@ assets = [ "Df" ]
 id = "OP-02-003"
 resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -117,6 +142,7 @@ assets = [ "Df" ]
 id = "OP-02-004"
 resources = [ "MTN-MECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -131,6 +157,7 @@ assets = [ "Df" ]
 id = "OP-03-001"
 resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -142,6 +169,7 @@ assets = [ "Df" ]
 id = "OP-03-002"
 resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -153,6 +181,7 @@ assets = [ "Df" ]
 id = "OP-03-003"
 resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -167,6 +196,7 @@ assets = [ "Df" ]
 id = "OP-03-001"
 resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -178,6 +208,7 @@ assets = [ "Df" ]
 id = "OP-03-002"
 resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -189,6 +220,7 @@ assets = [ "Df" ]
 id = "OP-03-003"
 resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -203,6 +235,7 @@ assets = [ "Df" ]
 id = "OP-04-001"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -214,6 +247,7 @@ assets = [ "Df" ]
 id = "OP-04-002"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -225,6 +259,7 @@ assets = [ "Df" ]
 id = "OP-04-003"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -239,6 +274,7 @@ assets = [ "Df" ]
 id = "OP-05-001"
 resources = [ "MEDIC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -253,6 +289,7 @@ assets = [ "Df" ]
 id = "OP-05-001"
 resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -264,6 +301,7 @@ assets = [ "Df" ]
 id = "OP-05-002"
 resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -278,6 +316,7 @@ assets = [ "Df" ]
 id = "OP-06-001"
 resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -288,6 +327,7 @@ assets = [ "Df" ]
 id = "OP-06-002"
 resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -298,6 +338,7 @@ assets = [ "Df" ]
 id = "OP-06-003"
 resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -312,6 +353,7 @@ assets = [ "Df" ]
 id = "OP-07-001"
 resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -322,6 +364,7 @@ assets = [ "Df" ]
 id = "OP-07-002"
 resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -332,6 +375,7 @@ assets = [ "Df" ]
 id = "OP-07-003"
 resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -342,6 +386,7 @@ assets = [ "Df" ]
 id = "OP-07-004"
 resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -356,6 +401,7 @@ assets = [ "Df" ]
 id = "OP-08-001"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -366,6 +412,7 @@ assets = [ "Df" ]
 id = "OP-08-002"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -376,6 +423,7 @@ assets = [ "Df" ]
 id = "OP-08-003"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -386,6 +434,7 @@ assets = [ "Df" ]
 id = "OP-08-004"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -400,6 +449,7 @@ assets = [ "Df" ]
 id = "OP-09-001"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -410,6 +460,7 @@ assets = [ "Df" ]
 id = "OP-09-002"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -420,6 +471,7 @@ assets = [ "Df" ]
 id = "OP-09-003"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -430,6 +482,7 @@ assets = [ "Df" ]
 id = "OP-09-004"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -444,6 +497,7 @@ assets = [ "Df" ]
 id = "OP-10-001"
 resources = [ "INP-SITE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -454,6 +508,7 @@ assets = [ "Df" ]
 id = "OP-10-002"
 resources = [ "INP-SITE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -464,6 +519,7 @@ assets = [ "Df" ]
 id = "OP-10-003"
 resources = [ "INP-SITE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -478,6 +534,7 @@ assets = [ "Df" ]
 id = "OP-11-001"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -488,6 +545,7 @@ assets = [ "Df" ]
 id = "OP-11-002"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -498,6 +556,7 @@ assets = [ "Df" ]
 id = "OP-11-003"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -508,6 +567,7 @@ assets = [ "Df" ]
 id = "OP-11-004"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -518,6 +578,7 @@ assets = [ "Df" ]
 id = "OP-11-005"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
