--- a/configuration/actor_specifications/actor_specification_te.toml
+++ b/configuration/actor_specifications/actor_specification_te.toml
@@ -1,7 +1,23 @@
+[strategic]
+id = "strategic"
+asset = "Df"
+strategic_options.number_of_removed_work_orders = 25
+strategic_options.urgency_weight = 1
+strategic_options.resource_penalty_weight = 1000000
+strategic_options.clustering_weight = 1000
+
+[tactical]
+id = "tactical"
+asset = "Df"
+tactical_options.number_of_removed_work_orders = 25
+tactical_options.urgency = 1
+tactical_options.resource_penalty = 10000000
+
 [[supervisors]]
 id = "main"
 number_of_supervisor_periods = 3
 assets = [ "Df" ]
+supervisor_options.number_of_removed_work_orders = 15
 # [[supervisors]]
 # id = "supervisor-second"
 ################################
@@ -11,6 +27,7 @@ assets = [ "Df" ]
 id = "OP-01-001"
 resources = ["MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -22,6 +39,7 @@ assets = [ "Df" ]
 id = "OP-01-002"
 resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -36,6 +54,7 @@ assets = [ "Df" ]
 id = "OP-02-001"
 resources = [ "MTN-INST" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -47,6 +66,7 @@ assets = [ "Df" ]
 id = "OP-02-002"
 resources = [ "MTN-INST" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -61,6 +81,7 @@ assets = [ "Df" ]
 id = "OP-02-001"
 resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -72,6 +93,7 @@ assets = [ "Df" ]
 id = "OP-02-002"
 resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -86,6 +108,7 @@ assets = [ "Df" ]
 id = "OP-03-001"
 resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -100,6 +123,7 @@ assets = [ "Df" ]
 id = "OP-03-001"
 resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -114,6 +138,7 @@ assets = [ "Df" ]
 id = "OP-04-001"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -125,6 +150,7 @@ assets = [ "Df" ]
 id = "OP-04-002"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -136,6 +162,7 @@ assets = [ "Df" ]
 id = "OP-04-003"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -147,6 +174,7 @@ assets = [ "Df" ]
 id = "OP-04-004"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -161,6 +189,7 @@ assets = [ "Df" ]
 id = "OP-05-001"
 resources = [ "MEDIC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -175,6 +204,7 @@ assets = [ "Df" ]
 id = "OP-05-001"
 resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -186,6 +216,7 @@ assets = [ "Df" ]
 id = "OP-05-002"
 resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -258,6 +289,7 @@ assets = [ "Df" ]
 id = "OP-08-001"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -302,6 +334,7 @@ assets = [ "Df" ]
 id = "OP-09-001"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -312,6 +345,7 @@ assets = [ "Df" ]
 id = "OP-09-002"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
