--- a/crates/imperium/scripts/strategic/resource_configurations/base_resources.toml
+++ b/crates/imperium/scripts/strategic/resource_configurations/base_resources.toml
@@ -1,7 +1,23 @@
+[strategic]
+id = "strategic"
+asset = "Df"
+strategic_options.number_of_removed_work_orders = 25
+strategic_options.urgency_weight = 1
+strategic_options.resource_penalty_weight = 1000000
+strategic_options.clustering_weight = 1000
+
+[tactical]
+id = "tactical"
+asset = "Df"
+tactical_options.number_of_removed_work_orders = 25
+tactical_options.urgency = 1
+tactical_options.resource_penalty = 10000000
+
 [[supervisors]]
 id = "main"
 number_of_supervisor_periods = 3
 assets = [ "Df" ]
+supervisor_options.number_of_removed_work_orders = 15
 
 # [[supervisors]]
 # id = "supervisor-second"
@@ -13,6 +29,7 @@ assets = [ "Df" ]
 id = "OP-01-001"
 resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -24,6 +41,7 @@ assets = [ "Df" ]
 id = "OP-01-002"
 resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -35,6 +53,7 @@ assets = [ "Df" ]
 id = "OP-01-003"
 resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -46,6 +65,7 @@ assets = [ "Df" ]
 id = "OP-01-004"
 resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -60,6 +80,7 @@ assets = [ "Df" ]
 id = "OP-02-001"
 resources = [ "MTN-INST" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -71,6 +92,7 @@ assets = [ "Df" ]
 id = "OP-02-002"
 resources = [ "MTN-INST" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -85,6 +107,7 @@ assets = [ "Df" ]
 id = "OP-02-001"
 resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -96,6 +119,7 @@ assets = [ "Df" ]
 id = "OP-02-002"
 resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -107,6 +131,7 @@ assets = [ "Df" ]
 id = "OP-02-003"
 resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -118,6 +143,7 @@ assets = [ "Df" ]
 id = "OP-02-004"
 resources = [ "MTN-MECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -132,6 +158,7 @@ assets = [ "Df" ]
 id = "OP-03-001"
 resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -143,6 +170,7 @@ assets = [ "Df" ]
 id = "OP-03-002"
 resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -154,6 +182,7 @@ assets = [ "Df" ]
 id = "OP-03-003"
 resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -168,6 +197,7 @@ assets = [ "Df" ]
 id = "OP-03-001"
 resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -179,6 +209,7 @@ assets = [ "Df" ]
 id = "OP-03-002"
 resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -190,6 +221,7 @@ assets = [ "Df" ]
 id = "OP-03-003"
 resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -204,6 +236,7 @@ assets = [ "Df" ]
 id = "OP-04-001"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -215,6 +248,7 @@ assets = [ "Df" ]
 id = "OP-04-002"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -226,6 +260,7 @@ assets = [ "Df" ]
 id = "OP-04-003"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -240,6 +275,7 @@ assets = [ "Df" ]
 id = "OP-05-001"
 resources = [ "MEDIC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -254,6 +290,7 @@ assets = [ "Df" ]
 id = "OP-05-001"
 resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -265,6 +302,7 @@ assets = [ "Df" ]
 id = "OP-05-002"
 resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -279,6 +317,7 @@ assets = [ "Df" ]
 id = "OP-06-001"
 resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -289,6 +328,7 @@ assets = [ "Df" ]
 id = "OP-06-002"
 resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -299,6 +339,7 @@ assets = [ "Df" ]
 id = "OP-06-003"
 resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -313,6 +354,7 @@ assets = [ "Df" ]
 id = "OP-07-001"
 resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -324,6 +366,7 @@ assets = [ "Df" ]
 id = "OP-07-002"
 resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -335,6 +378,7 @@ assets = [ "Df" ]
 id = "OP-07-003"
 resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -345,6 +389,7 @@ assets = [ "Df" ]
 id = "OP-07-004"
 resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -359,6 +404,7 @@ assets = [ "Df" ]
 id = "OP-08-001"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -369,6 +415,7 @@ assets = [ "Df" ]
 id = "OP-08-002"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -379,6 +426,7 @@ assets = [ "Df" ]
 id = "OP-08-003"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -389,6 +437,7 @@ assets = [ "Df" ]
 id = "OP-08-004"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -403,6 +452,7 @@ assets = [ "Df" ]
 id = "OP-09-001"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -413,6 +463,7 @@ assets = [ "Df" ]
 id = "OP-09-002"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -423,6 +474,7 @@ assets = [ "Df" ]
 id = "OP-09-003"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -433,6 +485,7 @@ assets = [ "Df" ]
 id = "OP-09-004"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -447,6 +500,7 @@ assets = [ "Df" ]
 id = "OP-10-001"
 resources = [ "INP-SITE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -457,6 +511,7 @@ assets = [ "Df" ]
 id = "OP-10-002"
 resources = [ "INP-SITE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -467,6 +522,7 @@ assets = [ "Df" ]
 id = "OP-10-003"
 resources = [ "INP-SITE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -481,6 +537,7 @@ assets = [ "Df" ]
 id = "OP-11-001"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -491,6 +548,7 @@ assets = [ "Df" ]
 id = "OP-11-002"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -501,6 +559,7 @@ assets = [ "Df" ]
 id = "OP-11-003"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -511,6 +570,7 @@ assets = [ "Df" ]
 id = "OP-11-004"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -521,6 +581,7 @@ assets = [ "Df" ]
 id = "OP-11-005"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
