--- a/crates/imperium/scripts/strategic/resource_configurations/low_resources.toml
+++ b/crates/imperium/scripts/strategic/resource_configurations/low_resources.toml
@@ -1,7 +1,23 @@
+[strategic]
+id = "strategic"
+asset = "Df"
+strategic_options.number_of_removed_work_orders = 25
+strategic_options.urgency_weight = 1
+strategic_options.resource_penalty_weight = 1000000
+strategic_options.clustering_weight = 1000
+
+[tactical]
+id = "tactical"
+asset = "Df"
+tactical_options.number_of_removed_work_orders = 25
+tactical_options.urgency = 1
+tactical_options.resource_penalty = 10000000
+
 [[supervisors]]
 id = "main"
 number_of_supervisor_periods = 3
 assets = [ "Df" ]
+supervisor_options.number_of_removed_work_orders = 15
 
 # [[supervisors]]
 # id = "supervisor-second"
@@ -12,6 +28,7 @@ assets = [ "Df" ]
 id = "OP-01-001"
 resources = ["MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -23,6 +40,7 @@ assets = [ "Df" ]
 id = "OP-01-002"
 resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -37,6 +55,7 @@ assets = [ "Df" ]
 id = "OP-02-001"
 resources = [ "MTN-INST" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -48,6 +67,7 @@ assets = [ "Df" ]
 id = "OP-02-002"
 resources = [ "MTN-INST" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -62,6 +82,7 @@ assets = [ "Df" ]
 id = "OP-02-001"
 resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -73,6 +94,7 @@ assets = [ "Df" ]
 id = "OP-02-002"
 resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -87,6 +109,7 @@ assets = [ "Df" ]
 id = "OP-03-001"
 resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -98,6 +121,7 @@ assets = [ "Df" ]
 id = "OP-03-002"
 resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -112,6 +136,7 @@ assets = [ "Df" ]
 id = "OP-03-001"
 resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -126,6 +151,7 @@ assets = [ "Df" ]
 id = "OP-04-001"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -137,6 +163,7 @@ assets = [ "Df" ]
 id = "OP-04-002"
 resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -152,6 +179,7 @@ assets = [ "Df" ]
 id = "OP-05-001"
 resources = [ "MEDIC" ]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -166,6 +194,7 @@ assets = [ "Df" ]
 id = "OP-05-001"
 resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -181,6 +210,7 @@ assets = [ "Df" ]
 id = "OP-06-001"
 resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -195,6 +225,7 @@ assets = [ "Df" ]
 id = "OP-07-001"
 resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -205,6 +236,7 @@ assets = [ "Df" ]
 id = "OP-07-002"
 resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -219,6 +251,7 @@ assets = [ "Df" ]
 id = "OP-08-001"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -229,6 +262,7 @@ assets = [ "Df" ]
 id = "OP-08-002"
 resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -243,6 +277,7 @@ assets = [ "Df" ]
 id = "OP-09-001"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -253,6 +288,7 @@ assets = [ "Df" ]
 id = "OP-09-002"
 resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -267,6 +303,7 @@ assets = [ "Df" ]
 id = "OP-10-001"
 resources = [ "INP-SITE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -277,6 +314,7 @@ assets = [ "Df" ]
 id = "OP-10-002"
 resources = [ "INP-SITE"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -291,6 +329,7 @@ assets = [ "Df" ]
 id = "OP-11-001"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -301,6 +340,7 @@ assets = [ "Df" ]
 id = "OP-11-002"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -311,6 +351,7 @@ assets = [ "Df" ]
 id = "OP-11-003"
 resources = [ "PRODTECH"]
 hours_per_day = 6.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
