--- a/configuration/actor_specifications/actor_specification_test.toml
+++ b/configuration/actor_specifications/actor_specification_test.toml
@@ -1,8 +1,24 @@
+[strategic]
+id = "strategic"
+asset = "Df"
+strategic_options.number_of_removed_work_orders = 25
+strategic_options.urgency_weight = 1
+strategic_options.resource_penalty_weight = 1000000
+strategic_options.clustering_weight = 1000
+
+[tactical]
+id = "tactical"
+asset = "Df"
+tactical_options.number_of_removed_work_orders = 25
+tactical_options.urgency = 1
+tactical_options.resource_penalty = 10000000
+
  
 [[supervisors]]
 id = "main"
 number_of_supervisor_periods = 3
 assets = [ "Df" ]
+supervisor_options.number_of_removed_work_orders = 15
 
 # [[supervisors]]
 # id = "supervisor-second"
@@ -13,6 +29,7 @@ assets = [ "Df" ]
 id = "OP-01-001"
 resources = [ "MTN-MECH", "MTN-ELEC", "PRODTECH" ]
 hours_per_day = 81.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00",  end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -24,6 +41,7 @@ assets = [ "Df" ]
 id = "OP-01-002"
 resources = [ "MTN-MECH", "MTN-ELEC", "MTN-INST" ]
 hours_per_day = 81.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
@@ -35,6 +53,7 @@ assets = [ "Df" ]
 id = "OP-01-003"
 resources = [ "MTN-LAGG", "MTN-SCAF", "MTN-RIGG" ]
 hours_per_day = 81.0
+operational_options.number_of_removed_work_orders = 15
 operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:00:00" }
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
