--- a/static_files/scheduler/package.json
+++ b/static_files/scheduler/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.0.8",
+    "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-table": "^8.21.2",
     "autoprefixer": "^10.4.20",
     "axios": "1.7.9",
@@ -27,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "7.2.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -52,5 +54,8 @@
     "workerDirectory": [
       "public"
     ]
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
