--- a/static_files/scheduler/package.json
+++ b/static_files/scheduler/package.json
@@ -14,8 +14,10 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.8",
     "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-table": "^8.21.2",
